<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hohl4"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="50"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="ru.narod.nod.fifteen.MainActivity">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/the_fifteen"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/lime"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="250dp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_hohl2_light"
            android:shadowColor="@color/black"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/cont"
            android:textColor="@color/yellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="250dp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_hohl2_light"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="15"
            android:text="@string/new_game"
            android:textColor="@color/fuchsia"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnHS"
            android:layout_width="250dp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_hohl2_light"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/high_scores"
            android:textColor="@color/maroon"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnRules"
            android:layout_width="250dp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_hohl2_light"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/rules"
            android:textColor="@color/red"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="250dp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_hohl2_light"
            android:shadowColor="@color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:text="@string/exit"
            android:textColor="@color/blue"
            android:textSize="40sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>