<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden5"
    android:theme="@android:style/Theme.Holo.Light.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="ru.narod.nod.fifteen.HighScoresActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/high_scores_head"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#5a3d00"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/best"
                android:textColor="#be1113"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvIs"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.59"
                android:gravity="center_vertical|center|center_horizontal"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/is"
                android:textColor="#5a3d00"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/hstext"
                android:textAlignment="center"
                android:textColor="#be1113"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOnThe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/on_the"
                android:textColor="#5a3d00"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:shadowColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="@string/hsdate"
                android:textAlignment="center"
                android:textColor="#5a3d00"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="30sp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
